--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:done-coding/done-coding-x.git"
+    "url": "https://github.com/done-coding/done-coding-x.git"
   },
   "author": "JustSoSu",
   "license": "MIT",
