--- a/packages/promise/package.json
+++ b/packages/promise/package.json
@@ -30,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:done-coding/done-coding-x.git",
+    "url": "https://github.com/done-coding/done-coding-x.git",
     "directory": "packages/promise"
   },
   "publishConfig": {
