--- a/packages/promise/package.json
+++ b/packages/promise/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@done-coding/x-promise",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "拓展promise",
   "private": false,
   "module": "es/index.mjs",
@@ -51,6 +51,5 @@
   },
   "engines": {
     "node": ">=18.0.0"
-  },
-  "dependencies": {}
+  }
 }
