--- a/packages/promise/package.json
+++ b/packages/promise/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@done-coding/x-promise",
-  "version": "0.0.1-alpha.0",
+  "version": "0.1.0",
   "description": "拓展promise",
   "private": false,
   "module": "es/index.mjs",
